# labo1-h25

./: _config.yml  index.md  xcompilation.md
etc/: ct-ng-config  duckdns.sh
src/: CMakeLists.txt  syncAndStartGDB.sh  tp1.c
